<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    tools:context=".crearTip.CrearTipActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_fecha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ingresar_fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:drawableEnd="@drawable/ic_date_range_accent"
            android:focusable="false"
            android:imeOptions="actionNext"
            android:nextFocusUp="@id/textInputLayout_titulo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_titulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_ingresar_titulo"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_fecha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLength="50"
            android:maxLines="1"
            android:nextFocusUp="@id/textInputLayout_descripcion"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_descripcion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_ingresar_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_titulo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:lines="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_crear"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_label_guardar"
        android:textAppearance="@style/Widget.MaterialComponents.Button"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/button_editar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_descripcion" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_editar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_label_editar"
        android:textAppearance="@style/Widget.MaterialComponents.Button"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_crear"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_descripcion" />
</androidx.constraintlayout.widget.ConstraintLayout>